changed the submit button to submit initials here button

--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
 
                 </div>
 
-                <button id="submit">Submit</button>
+                <button id="submit">Submit Initials Here</button>
 
             </form>
 
